Css: Fix enemies page to have better spacing throughout.

--- a/deploy/www/css/enemies.css
+++ b/deploy/www/css/enemies.css
@@ -17,7 +17,7 @@
 	display:inline-block;margin-left:1em;width: 6.9em;
 }
 #current-enemies-list li{
-	position:relative;margin-bottom:0.1em;
+	position:relative;margin-bottom:0.1em;white-space:nowrap;
 }
 #current-enemies-list .enemy-action-box{
 	display:inline-block;width: 13em;
