--- a/deploy/www/css/style.css
+++ b/deploy/www/css/style.css
@@ -2345,8 +2345,8 @@ select option #blue-class-select {
 }
 
 #npc-list li {
-	margin: .2em .3em .2em .2em;
-	display:inline;
+	padding: .2em .3em .2em .2em;
+	display:inline-block;
 	margin-left: 1em;
 	white-space: nowrap;
 	min-height:2em; 
